--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.Material3.Dark.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".Handlers.UserHandling.HandleUserSignIn"
+            android:exported="false" />
+        <activity
             android:name=".Handlers.ChartHandler.ChartHandlerActivity"
             android:exported="false" />
         <activity
