--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,22 +23,28 @@
         tools:targetApi="31">
         <activity
             android:name=".ProfileActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Base.Theme.BudgetBuddy"/>
         <activity
             android:name=".Handlers.ExchangeHandler.ExchangeHandlerActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Base.Theme.BudgetBuddy"/>
         <activity
             android:name=".Handlers.UserHandling.HandleUserSignIn"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Base.Theme.BudgetBuddy"/>
         <activity
             android:name=".Handlers.ChartHandler.ChartHandlerActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Base.Theme.BudgetBuddy"/>
         <activity
             android:name=".SettingsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Base.Theme.BudgetBuddy"/>
         <activity
             android:name=".Handlers.FiancesHandler.FinancesHandlerActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Base.Theme.BudgetBuddy"/>
         <activity
             android:name=".RegisterActivity"
             android:exported="false"
