--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:name="android.hardware.nfc"
@@ -22,29 +23,37 @@
         android:theme="@style/Theme.Material3.Dark.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".GeneralStatisticsActivity"
+            android:exported="false"
+            android:theme="@style/Base.Theme.BudgetBuddy" />
+        <activity
+            android:name=".GeneratedStatisticsActivity"
+            android:exported="false"
+            android:theme="@style/Base.Theme.BudgetBuddy" />
+        <activity
             android:name=".ProfileActivity"
             android:exported="false"
-            android:theme="@style/Base.Theme.BudgetBuddy"/>
+            android:theme="@style/Base.Theme.BudgetBuddy" />
         <activity
             android:name=".Handlers.ExchangeHandler.ExchangeHandlerActivity"
             android:exported="false"
-            android:theme="@style/Base.Theme.BudgetBuddy"/>
+            android:theme="@style/Base.Theme.BudgetBuddy" />
         <activity
             android:name=".Handlers.UserHandling.HandleUserSignIn"
             android:exported="false"
-            android:theme="@style/Base.Theme.BudgetBuddy"/>
+            android:theme="@style/Base.Theme.BudgetBuddy" />
         <activity
             android:name=".Handlers.ChartHandler.ChartHandlerActivity"
             android:exported="false"
-            android:theme="@style/Base.Theme.BudgetBuddy"/>
+            android:theme="@style/Base.Theme.BudgetBuddy" />
         <activity
             android:name=".SettingsActivity"
             android:exported="false"
-            android:theme="@style/Base.Theme.BudgetBuddy"/>
+            android:theme="@style/Base.Theme.BudgetBuddy" />
         <activity
             android:name=".Handlers.FiancesHandler.FinancesHandlerActivity"
             android:exported="false"
-            android:theme="@style/Base.Theme.BudgetBuddy"/>
+            android:theme="@style/Base.Theme.BudgetBuddy" />
         <activity
             android:name=".RegisterActivity"
             android:exported="false"
@@ -55,6 +64,7 @@
             android:theme="@style/Base.Theme.BudgetBuddy">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
