--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.Dark.NoActionBar"
         tools:targetApi="31">
@@ -36,10 +36,6 @@
 
         <activity
             android:name=".GeneralStatisticsActivity"
-            android:exported="false"
-            android:theme="@style/Base.Theme.BudgetBuddy" />
-        <activity
-            android:name=".GeneratedStatisticsActivity"
             android:exported="false"
             android:theme="@style/Base.Theme.BudgetBuddy" />
         <activity
